// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stories/styles/Bubble Animation smoke-test 1`] = `
<div class="_stereoscopic_2sm3s_8 _animation_2sm3s_16">
</div>
`;

exports[`stories/styles/Bubble Normal smoke-test 1`] = `
<div class="_normal_2sm3s_1">
</div>
`;

exports[`stories/styles/Bubble Stereoscopic smoke-test 1`] = `
<div class="_stereoscopic_2sm3s_8">
</div>
`;
